--- a/index.html
+++ b/index.html
@@ -4,107 +4,113 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="/styles.css">
+  <title>Edufold Main Page</title>
+  <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="/css/media_quaries.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-  <section class="header">
-    <nav>
-      <a id="logo" href="">
-        <i class="fa-solid fa-graduation-cap"></i>
-        <p>Edufold</p>
+  <header class="header">
+    <nav class="header__nav nav">
+      <a class="nav__logo" href="">
+        <i class="nav__logo-img fa-solid fa-graduation-cap"></i>
+        <p class="nav__logo-text">Edufold</p>
       </a>
-      <div class="nav-links" id="navLinks">
+      <div>
         <i class="fa-solid fa-xmark" onclick="hideMenu()"></i>
-        <ul>
-          <li><a href="">HOME</a></li>
-          <li><a href="">ABOUT</a></li>
-          <li><a href="">COURSE</a></li>
-          <li><a href="">BLOG</a></li>
-          <li><a href="">CONTACT</a></li>
+        <ul class="nav__list">
+          <li class="nav__item"><a class="nav__link" href="">HOME</a></li>
+          <li class="nav__item"><a class="nav__link" href="">ABOUT</a></li>
+          <li class="nav__item"><a class="nav__link" href="">COURSE</a></li>
+          <li class="nav__item"><a class="nav__link" href="">BLOG</a></li>
+          <li class="nav__item"><a class="nav__link" href="">CONTACT</a></li>
         </ul>
       </div> 
       <i class="fa-solid fa-bars" onclick="showMenu()"></i>
     </nav>
-    <div class="text-box">
-      <h1>World's Biggest University</h1>
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi nemo provident et porro magni? Fuga dicta provident aspernatur eaque.</p>
-      <a href="" class="hero-btn">Visit us to know more</a>
+    <div class="header__text-box">
+      <h1 class="header__main-text main-text">World's Biggest University</h1>
+      <p class="header__sub-text sub-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi nemo provident et porro magni? Fuga dicta provident aspernatur eaque.</p>
+      <a class="header__button button" href="">Visit us to know more</a>
     </div>                                                                                                                                
-  </section>
-  <section class="course-container">
-    <h1>Courses We Offer</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-    <div id="courses">
-      <div class="course">
-        <h3>Intermidiate</h3>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate distinctio autem, cumque vel debitis magnam dolores commodi? Veritatis voluptas possimus in accusamus delectus, nihil ea quisquam voluptatibus natus numquam libero.</p>
+  </header>
+  
+  <section class="container course-section">
+    <h1 class="course-section__main-text main-text">Courses We Offer</h1>
+    <p class="course-section__sub-text sub-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+    <div class="course-section__courses-list">
+      <div class="course-section__course">
+        <h3 class="main-text">Intermidiate</h3>
+        <p class="sub-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate distinctio autem, cumque vel debitis magnam dolores commodi? Veritatis voluptas possimus in accusamus delectus, nihil ea quisquam voluptatibus natus numquam libero.</p>
       </div>
-      <div class="course">
-        <h3>Degree</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum quia sapiente nemo quas at, recusandae minima doloremque porro, id sed reprehenderit aliquam hic! Nobis officia esse nemo omnis facere officiis.</p>
+      <div class="course-section__course">
+        <h3 class="main-text">Degree</h3>
+        <p class="sub-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum quia sapiente nemo quas at, recusandae minima doloremque porro, id sed reprehenderit aliquam hic! Nobis officia esse nemo omnis facere officiis.</p>
       </div>
-      <div class="course">
-        <h3>Post Grduation</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias delectus, modi minima amet blanditiis non id voluptatem, ipsum quisquam provident eos repellat quos adipisci ducimus ipsa aut ex perferendis alias.</p>
+      <div class="course-section__course">
+        <h3 class="main-text">Post Grduation</h3>
+        <p class="sub-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias delectus, modi minima amet blanditiis non id voluptatem, ipsum quisquam provident eos repellat quos adipisci ducimus ipsa aut ex perferendis alias.</p>
       </div>            
     </div>                                                                     
   </section>
-  <section class="campuse-container">
-    <h1>Our Global Campus</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-    <div id="campuses">
-      <div class="campuse">
-        <img class="campuse-img" src="/images/london.png" alt="london">
-        <div class="upper-layer">
+  
+  <section class="container campuse-section">
+    <h1 class="main-text">Our Global Campus</h1>
+    <p class="sub-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+    <div class="campuse-section__campuses-list">
+      <div class="campuse-section__campuse">
+        <img class="campuse-section__campuse-img" src="/images/london.png" alt="london">
+        <div class="campuse-section__upper-layer">
           <h3>London</h3>
         </div>
       </div>
-      <div class="campuse">
-        <img class="campuse-img" src="/images/newyork.png" alt="newyork">
-        <div class="upper-layer">
+      <div class="campuse-section__campuse">
+        <img class="campuse-section__campuse-img" src="/images/newyork.png" alt="newyork">
+        <div class="campuse-section__upper-layer">
           <h3>New York</h3>
         </div>
       </div>
-      <div class="campuse">
-        <img class="campuse-img" src="/images/washington.png" alt="washington">
-        <div class="upper-layer">
+      <div class="campuse-section__campuse">
+        <img class="campuse-section__campuse-img" src="/images/washington.png" alt="washington">
+        <div class="campuse-section__upper-layer">
           <h3>Washington</h3>
         </div>
       </div>
     </div>
   </section>
-  <section class="facilities-container">
-    <h1>Our Facilities</h1>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
-    <div id="facilities">
-      <div class="facility">
-        <img class="facility-img" src="/images/library.png" alt="library">
+
+
+  <section class="container facility-section">
+    <h1 class="main-text">Our Facilities</h1>
+    <p class="sub-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+    <div class="facility-section__facilities-list">
+      <div class="facility-section__facility">
+        <img class="facility-section__facility-img" src="/images/library.png" alt="library">
         <h3>World Class Library</h3>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolor similique aspernatur assumenda esse soluta ipsum amet facere eveniet possimus.</p>
       </div>
-      <div class="facility">
-        <img class="facility-img" src="/images/basketball.png" alt="basketball">
+      <div class="facility-section__facility">
+        <img class="facility-section__facility-img" src="/images/basketball.png" alt="basketball">
         <h3>Largest Play Ground</h3>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolor similique aspernatur assumenda esse soluta ipsum amet facere eveniet possimus.</p>
       </div>
-      <div class="facility">
-        <img class="facility-img" src="/images/cafeteria.png" alt="cafeteria">
+      <div class="facility-section__facility">
+        <img class="facility-section__facility-img" src="/images/cafeteria.png" alt="cafeteria">
         <h3>Tasty and Healthy Food</h3>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolor similique aspernatur assumenda esse soluta ipsum amet facere eveniet possimus.</p>
       </div>
     </div>
   </section>
-  <section class="feedback-container">
-    <h1>What Our Student Says</h1>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
-    <div id="feedbacks">
-      <div class="feedback">
-        <img class="user-img" src="/images/user1.jpg" alt="user1">
-        <div class="user-info">
+
+  <section class="container feedback-section">
+    <h1 class="main-text">What Our Student Says</h1>
+    <p class="sub-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+    <div class="feedback-section__feedbacks-list">
+      <div class="feedback-section__feedback">
+        <img class="feedback-section__user-img" src="/images/user1.jpg" alt="user1">
+        <div class="feedback-section__user-info">
           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolor similique aspernatur assumenda esse soluta ipsum amet facere eveniet possimus.</p>
           <h3>Christine Berkley</h3>
           <i class="fa-solid fa-star"></i>
@@ -114,9 +120,9 @@
           <i class="fa-solid fa-star-half"></i>
         </div>
       </div>
-      <div class="feedback">
-        <img class="user-img" src="/images/user2.jpg" alt="user2">
-        <div class="user-info">
+      <div class="feedback-section__feedback">
+        <img class="feedback-section__user-img" src="/images/user2.jpg" alt="user2">
+        <div class="feedback-section__user-info">
           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolor similique aspernatur assumenda esse soluta ipsum amet facere eveniet possimus.</p>
           <h3>Devid Byer</h3>
           <i class="fa-solid fa-star"></i>
@@ -128,25 +134,29 @@
       </div>
     </div>
   </section>
-  <section class="enroll-container">
-    <div class="enroll-content">
+
+  <section class="container enroll-section">
+    <div class="enroll-section__enroll-content">
       <h1>Enroll For our Various Online Courses Anywhere From The World</h1>
-      <a href="" class="hero-btn">CONTANCT US</a>
+      <a href="" class="button">CONTANCT US</a>
     </div>
   </section>
-  <section class="footer">
-      <h4>About Us</h4>
-      <p>
+
+  <footer class="footer">
+      <h4 class="main-text">About Us</h4>
+      <p class="sub-text">
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus quasi fugiat provident doloremque repellendus, vitae sint, molestiae quibusdam odio mollitia soluta tempora.
       </p>
-      <div class="social-medias">
+      <div class="footer__social-medias">
         <a href=""><i class="fa-brands fa-facebook"></i></a>
         <a href=""><i class="fa-brands fa-instagram"></i></a>
         <a href=""><i class="fa-brands fa-twitter"></i></a>
       </div>
-      <p>Made with <i class="fa-solid fa-heart"></i> by @terrytarik</p>
-      </section>
-  <script src="/menu_logic.js" type="text/javascript"></script>     
+      <p class="sub-text">Made with <i class="fa-solid fa-heart"></i> by @terrytarik</p>
+  </footer>
+
+
+  <script src="/scripts/main_page.js" type="text/javascript"></script>     
   <script src="https://kit.fontawesome.com/e5024b61d2.js" crossorigin="anonymous"></script>       
 </body>
 </html>
